--- a/venv-script/requirements.txt
+++ b/venv-script/requirements.txt
@@ -2,6 +2,7 @@ click==6.7
 coverage==4.5.1
 Flask==1.0.1
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
@@ -11,3 +12,4 @@ psycopg2==2.7.4
 six==1.11.0
 SQLAlchemy==1.2.7
 Werkzeug==0.14.1
+WTForms==2.1
